# agentic-job-search

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml
data/: README.md  email.env.example  profile.example.txt
docs/: automation.rst  cli.rst  conf.py  index.rst  overview.rst  sources.rst
scripts/: cold_test.py  gold_test.py  run_all_sources_debug.sh  run_profile_match.sh  run_semantic_match.sh  send_top_llm_match_email.sh  send_top_matches_email.sh  send_top_newest_email.sh
src/job_searcher/: __init__.py  cli.py  debugging.py  emailing.py  exporters.py  http.py  matching.py  models.py  official_links.py  reporting.py  search.py
src/job_searcher/sources/: __init__.py  arbeitnow.py  arbeitsagentur.py  ashby.py  base.py  berlin_startup_jobs.py  bund_de.py  experis.py  glassdoor.py  google.py  greenhouse.py  indeed.py  interamt.py  jobvector.py  karriere_nrw.py  kununu.py  lever.py  linkedin.py  personio.py  placeholder.py  remote_com.py  remotive.py  smartrecruiters.py  stepstone.py  workday.py  xing.py
tests/: test_core.py
