[project]
name = "job-searcher"
version = "0.1.0"
description = "MVP job search assistant that collects likely official application links."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
job-searcher = "job_searcher.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/job_searcher"]
